# DocumentCrypter

./: .gitignore  README.md  document-crypter-macos.spec  document-crypter.spec  main.py  pyproject.toml  requirements.txt
crypto/: __init__.py  handler.py
gui/: __init__.py  app.py
gui/views/: __init__.py  decrypt_view.py  encrypt_view.py  main_view.py
