[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "document-crypter"
version = "1.0.0"
description = "Desktop application for secure document encryption into images"
requires-python = ">=3.12"
dependencies = [
    "flet==0.24.1",
    "cryptography>=42.0.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pyinstaller.files]
hidden-import = ["flet"]
exclude = ["**/__pycache__"]

[project.scripts]
document-crypter = "main:main"